<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            loadImage="@{property.url}"
            placeholder="@{@drawable/ic_launcher_background}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:text="@{String.format(@string/city_text_and_label, property.city)}"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            tools:text="@string/city_text_and_label" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@{String.format(@string/price_text_and_label, property.price)}"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_city"
            tools:text="@string/price_text_and_label" />

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@{String.format(@string/area_text_and_label, property.area)}"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            tools:text="@string/area_text_and_label" />

        <TextView
            android:id="@+id/tv_bedroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@{String.format(@string/bedroom_text_and_label, property.bedrooms)}"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_area"
            tools:text="@string/bedroom_text_and_label" />

        <TextView
            android:id="@+id/tv_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@{String.format(@string/room_text_and_label, property.rooms)}"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_bedroom"
            tools:text="@string/room_text_and_label" />

        <TextView
            android:id="@+id/tv_property_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@{String.format(@string/property_type_text_and_label, property.propertyType)}"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_room"
            tools:text="@string/property_type_text_and_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="property"
            type="com.shahrukhamd.realestate.data.model.PropertyItem" />
    </data>

</layout>